<resources>
    <string name="app_name">İzmir BB</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="geri">Geri</string>
    <string name="haritada_goster">Haritada Göster</string>
    <string name="toplanma_yeri_arama">toplanma yeri arama</string>
    <string name="filtrele">Filtrele</string>
    <string name="ara">Ara</string>
    <string name="mahalle">Mahalle</string>
    <string name="ilce">İlçe</string>
    <string name="yenile">Yenile</string>
    <string name="izmir_buyuksehir_logo">izmir büyükşehir logosu</string>
    <string name="acil_toplanma_yerleri">Acil Toplanma Yerleri</string>
    <string name="muhtarliklar">Muhtarlıklar</string>
    <string name="ilce_nokta">İlçe :</string>
    <string name="mahalle_nokta">Mahalle :</string>
    <string name="otobus_hatlari">Otobüs Hatları</string>
    <string name="hatlar">Hatlar</string>
    <string name="baslangic_yeri">Başlangıç Yeri:</string>
    <string name="bitis_yeri">Bitiş Yeri:</string>
    <string name="calisma_saati_ggidis">Çalışma Saati Gidiş:</string>
    <string name="aciklama">Açıklama:</string>
    <string name="calisma_saati_donus">Çalışma Saati Dönüş:</string>
    <string name="calisma_saati_gidis">Çalışma Saati\nGidiş:</string>
    <string name="tarife">Tarife:</string>
    <string name="donus">Dönüş:</string>
    <string name="hareket_saatleri">Hareket Saatleri</string>
    <string name="gidisdonus">Gidiş ➜ Dönüş</string>
    <string name="bisikletli_gidis">Bisikletli Gidis</string>
    <string name="sag_ok">➜</string>
    <string name="elektrikli_gidis">Elektrikli Gidiş</string>
    <string name="engelli_gidis">Engelli Gidiş</string>
    <string name="bisikletli_donus">Bisikletli Dönüş</string>
    <string name="elektrikli_donus">Elektrikli Dönüş</string>
    <string name="engelli_donus">Engelli Dönüş</string>
    <string name="hava_durumu_foto">Hava Durumu Fotoğraf</string>
    <string name="pzt">Pzt</string>
    <string name="sali">Salı</string>
    <string name="cars">Cars</string>
    <string name="pers">Pers</string>
    <string name="cuma">Cuma</string>
    <string name="cmrts">Cmrts</string>
    <string name="pzr">Pzr</string>

    <string-array name="hareketSaatleriSecekeler">
        <item>Hafta İçi</item>
        <item>Cumartesi</item>
        <item>Pazar</item>
    </string-array>

</resources>