<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/gidisdonus"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_gidisDonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:text="06:15         06:35" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_gidisDonus">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/iv_bisikletGidis"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/bisikletli_gidis"
                app:srcCompat="@drawable/ic_baseline_pedal_bike_24" />

            <ImageView
                android:id="@+id/iv_elektrikGidis"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/elektrikli_gidis"
                app:srcCompat="@drawable/ic_baseline_electrical_services_24" />

            <ImageView
                android:id="@+id/iv_engelliGidis"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/engelli_gidis"
                app:srcCompat="@drawable/ic_baseline_wheelchair_pickup_24" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sag_ok"
                android:textAlignment="center"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/iv_bisikletDonus"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/bisikletli_donus"
                app:srcCompat="@drawable/ic_baseline_pedal_bike_24" />

            <ImageView
                android:id="@+id/iv_elektrikDonus"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/elektrikli_donus"
                app:srcCompat="@drawable/ic_baseline_electrical_services_24" />

            <ImageView
                android:id="@+id/iv_engelliDonus"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/engelli_donus"
                app:srcCompat="@drawable/ic_baseline_wheelchair_pickup_24" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView_neZaman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text=" Hafta İçi" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>