<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainlayout_izmir_api_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.IzmirApi_Menu">

    <ImageView
        android:id="@+id/imageView_izmirLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/izmir_buyuksehir_logo"
        android:src="@drawable/izmir_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_design"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible">

        <Button
            android:id="@+id/button_muhtarliklar"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:layout_marginTop="16dp"
            android:text="@string/muhtarliklar"
            app:icon="@drawable/ic_baseline_person_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_acil_toplanma_yerleri" />

        <Button
            android:id="@+id/button_otobus_hatlari"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:layout_marginTop="16dp"
            android:text="@string/otobus_hatlari"
            app:icon="@drawable/ic_baseline_directions_bus_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_muhtarliklar" />

        <ImageView
            android:id="@+id/imageView_izmirHeadLogo"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:background="#014785"
            android:contentDescription="@string/izmir_buyuksehir_logo"
            android:src="@drawable/ibb150logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/space_bg"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:background="#014785"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></LinearLayout>

        <Button
            android:id="@+id/button_acil_toplanma_yerleri"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:layout_marginTop="24dp"
            android:text="@string/acil_toplanma_yerleri"
            app:icon="@drawable/ic_baseline_emergency_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_izmirHeadLogo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_havadurumu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView_havaDurumuIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/hava_durumu_foto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars"
                tools:srcCompat="@drawable/indir" />

            <TextView
                android:id="@+id/textView_havaDurumSicaklik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView_havaDurumuIcon"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="31°" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>